@@ -1,65 +1,44 @@
 package com.eternalcode.core.feature.language.config;
 
-import com.eternalcode.core.configuration.ReloadableConfig;
-import com.eternalcode.core.injector.annotations.component.ConfigurationFile;
+import com.eternalcode.core.configuration.AbstractConfigurationFile;
 import com.eternalcode.core.feature.language.Language;
+import com.eternalcode.core.injector.annotations.component.ConfigurationFile;
 import com.google.common.collect.ImmutableList;
-import net.dzikoysk.cdn.entity.Contextual;
-import net.dzikoysk.cdn.entity.Description;
-import net.dzikoysk.cdn.source.Resource;
-import net.dzikoysk.cdn.source.Source;
-import org.bukkit.Material;
-
+import eu.okaeri.configs.OkaeriConfig;
+import eu.okaeri.configs.annotation.Comment;
 import java.io.File;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import org.bukkit.Material;
 
 @ConfigurationFile
-public class LanguageConfiguration implements ReloadableConfig {
+public class LanguageConfiguration extends AbstractConfigurationFile {
 
-    @Description(" ")
+    @Comment(" ")
     public Language defaultLanguage = Language.EN;
     public List<Language> languages = Arrays.asList(Language.EN, Language.PL);
 
-    @Description(" ")
+    @Comment(" ")
     public LanguageSelector languageSelector = new LanguageSelector();
 
-    @Contextual
-    public static class LanguageSelector  {
-        @Description("# Name of inventory")
+    @Override
+    public File getConfigFile(File folder) {
+        return new File(folder, "language.yml");
+    }
+
+    public static class LanguageSelector extends OkaeriConfig {
+        @Comment("# Name of inventory")
         public String title = "&6Select a language";
 
-        @Description({ " ", "# Size of inventory" })
+        @Comment({" ", "# Size of inventory"})
         public int rows = 5;
 
-        @Description({ " ", "# Border settings" })
+        @Comment({" ", "# Border settings"})
         public Border border = new Border();
-
-        @Contextual
-        public static class Border {
-            public boolean fill = true;
-
-            @Description(" ")
-            public Material material = Material.GRAY_STAINED_GLASS_PANE;
-
-            @Description({ " ", "# TOP, BOTTOM, BORDER, ALL" })
-            public Border.FillType type = Border.FillType.BORDER;
-
-            @Description({ " ", "# Name (If you don't want name just set \"\")" })
-            public String name = " ";
-
-            @Description({ " ", "# Lore (If you don't want lore just set [])" })
-            public List<String> lore = Collections.emptyList();
-
-            public enum FillType {
-                TOP, BOTTOM, BORDER, ALL
-            }
-        }
-
-        @Description({ " ", "# List of languages" })
-        public List<LanguageConfigItem> languageConfigItemMap = new ImmutableList.Builder<LanguageConfigItem>()
-            .add(new LanguageConfigItem(
+        @Comment({" ", "# List of languages"})
+        public List<LanguageConfigItem> languageConfigItemMap = List.of(
+            new LanguageConfigItem(
                 "&c&lEnglish",
                 Collections.singletonList("&7▪ <gradient:#66ff99:#00ffff>Click to change language!"),
                 Material.PLAYER_HEAD,
@@ -68,8 +47,8 @@ public class LanguageConfiguration implements ReloadableConfig {
                 20,
                 Collections.emptyList(),
                 Language.EN
-            ))
-            .add(new LanguageConfigItem(
+            ),
+            new LanguageConfigItem(
                 "&c&lAuto",
                 Collections.singletonList("&7▪ <gradient:#66ff99:#00ffff>Kliknij, aby pobierać język z ustawień klienta!"),
                 Material.REPEATER,
@@ -78,8 +57,8 @@ public class LanguageConfiguration implements ReloadableConfig {
                 22,
                 Collections.emptyList(),
                 Language.DEFAULT
-            ))
-            .add(new LanguageConfigItem(
+            ),
+            new LanguageConfigItem(
                 "&c&lPolish",
                 Collections.singletonList("&7▪ <gradient:#66ff99:#00ffff>Kliknij aby zmienić język!"),
                 Material.PLAYER_HEAD,
@@ -88,13 +67,30 @@ public class LanguageConfiguration implements ReloadableConfig {
                 24,
                 Collections.emptyList(),
                 Language.PL
-            ))
-            .build();
-    }
+            )
+        );
 
-    @Override
-    public Resource resource(File folder) {
-        return Source.of(folder, "language.yml");
-    }
+        public static class Border extends OkaeriConfig {
+            public boolean fill = true;
 
+            @Comment(" ")
+            public Material material = Material.GRAY_STAINED_GLASS_PANE;
+
+            @Comment({" ", "# TOP, BOTTOM, BORDER, ALL"})
+            public Border.FillType type = Border.FillType.BORDER;
+
+            @Comment({" ", "# Name (If you don't want name just set \"\")"})
+            public String name = " ";
+
+            @Comment({" ", "# Lore (If you don't want lore just set [])"})
+            public List<String> lore = Collections.emptyList();
+
+            public enum FillType {
+                TOP,
+                BOTTOM,
+                BORDER,
+                ALL
+            }
+        }
+    }
 }
